[tool.poetry]
name = "repl_nix_Day-4-rock-paper-scissors-Python"
version = "0.1.0"
description = ""
authors = ["saifislam <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
